# llm-solutions

./: .env.example  README.md  main.py  pyproject.toml
data/: done_cycle_emotions.xlsx  done_emotions.xlsx  letters.pkl
notebooks/: checks.ipynb  control_emotions.ipynb  create_music.ipynb  example_check_user_query.ipynb  example_some_codes.ipynb  pypeline_combine.ipynb
src/: __init__.py  agent_system.py  agentsystem.py  checksystem.py  summarizer.py  usage_example.py
