[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain-gigachat>=0.3.10",
    "langchain-openai>=0.3.18",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
